CSS fix to rid of desktop overflowing page

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,8 +1,8 @@
 /* @import './base.css'; */
 
 body {
-  min-height: 100vh;
-  width: 100vw;
+  min-height: 100%;
+  width: 100%;
   height: 100%;
   margin: 0 auto;
   font-weight: normal;
